# automotive_car-web_backend

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260602_0001_create_routes.py  20260602_0002_add_users_and_owned_maps.py  20260602_0003_add_email_verification.py
app/: config.py  database.py  email_verification.py  main.py  maps.py  models.py  rate_limit.py  security.py  services.py
app/api/: router.py
app/api/routers/: auth.py  camera.py  health.py  maps.py  routes.py
app/schemas/: __init__.py  auth.py  health.py  maps.py  routes.py
tests/: conftest.py  test_api.py  test_camera.py  test_maps.py
