[project]
name = "automotive-car-web-backend"
version = "0.1.0"
description = "FastAPI backend for autonomous vehicle route selection and camera preview."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "email-validator>=2.2.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pyjwt>=2.9.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "pwdlib[argon2]>=0.2.1",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
